hphp/hack/test/typecheck/enum_class/typing3.bad.php.rust_elab.exp
File "typing3.bad.php", line 28, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing3.bad.php", line 42, characters 23-27:
Invalid argument (Typing[4323])
  File "typing3.bad.php", line 34, characters 31-34:
  `TBox` is a constrained type parameter
  File "typing3.bad.php", line 34, characters 39-42:
  This type constraint is violated
  File "typing3.bad.php", line 34, characters 39-42:
  Expected `IBox`
  File "typing3.bad.php", line 31, characters 4-11:
  But got `Box<int>`
